Remove line break

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html id="home" lang="en">
-<head>
+  <head>
   <!--Hint: avoid decorative punctuation marks in <title> tags -->
-  <title>HTML Antipatterns | Never Do These Things</title>
+    <title>HTML Antipatterns Never Do These Things</title>
   <!--Hint: Don't add extra space around `=` signs in attribute-value pairs-->
-  <meta charset = "utf-8" />
-  <meta name = "viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel = "stylesheet" href = "screen.css" />
-<body>
-<h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
-  <header id="header">
+    <meta charset ="utf-8"/>
+    <meta name ="viewport" content ="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+    <link rel ="stylesheet" href ="screen.css"/>
+  </head>
+  <body>
+    <h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
+    <header id="header">
     <nav id="navigation">
       <!--Hint: Match navigation labels with memorable paths/URLs-->
-      <li><a href="home.html">Home</a></li>
-      <li><a href="../my-res/">Resume</a></li>
-      <li><a href="randomstuff/">Interests</a></li>
-    </nav>
-  </header>
-  <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
-  <main id="home">
-    <article id="primary" class="green-background">
-      <h2><b>About Me</b></h2>
-      <h3><i>3rd-Year ITM Undergraduate</i></h3>
-      <h4>Majoring in Cybersecurity</h4><br />
-      <!--Hint: Hard-wrap lines of text longer than 80–100 characters-->
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      </p>
-    </article>
-    <!--Hint: Watch formatting, spacing, and tag completeness-->
-    <article id="my dog"
-      <div class="header">Look at this awesome dog!</div>
-        <figure>
-          <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
-            <figcaption>
-              Hank hanging out on the couch & being chill.
-              </figcaption>
-                </figrue>
-              </article>
-</main>
-  <aside id="supporting">
-    <p><h2>Facts About Me</h2></p>
-    <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
-    <ul>
-      <li class="quick-facts"><p><b> Quick Facts: </b></p>
-        <!-- Hint: Close up spaces between content and HTML tags on the same line-->
-        <li class="quick-facts"> Interested in cybersecurity </li>
-          <li class="quick-facts"> Hate cold winters </li>
-<li class="quick-facts" > Always running late </li></li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="readme.md">Read Me</a></li>
+        <li><a href="screen.css">CSS</a></li>
       </ul>
-  </aside>
-  <footer id="footer">
-    Site content and design &copy; by me.
-  </footer>
-</body>
+    </nav>
+    </header>
+  <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
+    <main id="main">
+      <article id="primary">
+        <h2><b>About Me</b></h2>
+        <h3><i>3rd-Year ITM Undergraduate</i></h3>
+        <h4>Majoring in Cybersecurity</h4>
+      <!--Hint: Hard-wrap lines of text longer than 80–100 characters-->
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit.
+        </p>
+      </article>
+    <!--Hint: Watch formatting, spacing, and tag completeness-->
+      <article id="dog">
+        <h2 class="heading">Look at this awesome dog!</h2>
+        <figure>
+          <img src="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
+          <figcaption>
+            Hank hanging out on the couch & being chill.
+          </figcaption>
+        </figure>
+      </article>
+    </main>
+    <aside id="supporting">
+      <h2>Facts About Me</h2>
+    <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
+      <ul id="quick-facts">
+        <li><b> Quick Facts: </b></li>
+        <!-- Hint: Close up spaces between content and HTML tags on the same line-->
+        <li> Interested in cybersecurity </li>
+        <li> Hate cold winters </li>
+        <li> Always running late </li>
+      </ul>
+    </aside>
+    <footer id="footer">
+      Site content and design &copy; by me.
+    </footer>
+  </body>
 </html>
