Correct ampersand simbol

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -38,7 +38,7 @@
         <figure>
           <img src="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
           <figcaption>
-            Hank hanging out on the couch & being chill.
+            Hank hanging out on the couch &amp; being chill.
           </figcaption>
         </figure>
       </article>
