--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -5,8 +5,8 @@
     <title>HTML Antipatterns Never Do These Things</title>
   <!--Hint: Don't add extra space around `=` signs in attribute-value pairs-->
     <meta charset="utf-8"/>
-    <meta name="viewport" content ="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
-    <link rel="stylesheet" href ="screen.css"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+    <link rel="stylesheet" href="screen.css"/>
   </head>
   <body>
     <h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
@@ -28,8 +28,11 @@
         <h4>Majoring in Cybersecurity</h4>
       <!--Hint: Hard-wrap lines of text longer than 80–100 characters-->
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum
-          dolor sit amet, consectetur adipiscing elit.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum
+          libero.
+          Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada.
+          Lorem ipsum dolor sit amet,consectetur adipiscing elit.
         </p>
       </article>
     <!--Hint: Watch formatting, spacing, and tag completeness-->
